src/components/Map/styles.scss
.map-container {
  height: calc(100vh - 100px);
  width: 100%;
  box-shadow: 0px 30px 12px rgba(0, 0, 0, 0.04);
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  background: #FFFFFF;
  margin: 0;
  box-sizing: border-box;

  &--modal {
    border-radius: 9px;
    height: 90%;
    width: 90%;
    z-index: 1000;
    padding: 10px;

    .leaflet-marker-icon {
      z-index: 1100;
    }
  }

  fieldset {
    border-radius: 13px;
    width: 100%;
    box-sizing: border-box;
    border: 2px solid #1E58EB;

    legend {
      margin: 0 auto;
      padding: 0 15px 0 15px;
      color: #0f2c76;
      font-weight: 500;
      font-size: 22px;
      line-height: 26px;
      text-align: center;
    }

    h3, h4 {
      font-weight: 300;
      font-size: 20px;
      line-height: 23px;
      text-align: center;
    }

  }

  .active {
    background-color: aliceblue;
  }

  &.get-coords-map-modal {
    max-width: none;
  }

  .map {
    height: 100%;
    width: 100%;
  }

  .map-modal__route {
    position: absolute;
    top: 10px;
    width: fit-content;
    max-width: 200px;
    left: 50px;
    height: fit-content;
    background-color: yellow;
    color: black;
    border: solid black 2px;
    border-radius: 7px;
    z-index: 10001;
    margin: auto;
    font-size: 20px;
    padding: 10px;
  }

  .leaflet-marker-icon {
    width: 25px;
    height: 41px;
    z-index: 400;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -100%);
  }

  .modal-buttons {
    position: absolute;
    bottom: 0;
    left: 20px;
    right: 20px;
    z-index: 1100;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    .button__wrapper {
      margin-right: 10px;
      margin-bottom: 10px;
      width: fit-content;

      button {
        padding: 0 20px;
      }
    }
  }
}

